# data-art

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
public/: index.html
src/: core.ts  server.ts
src/data_art/: __init__.py  cli.py  core.py
tests/: test_core.py
tests/ts/: core.test.ts
text/: Dockerfile  build.sh  pil.py  requirements.txt  run.sh
web/: Dockerfile  package-lock.json  package.json
web/public/: index.html
web/src/: core.test.ts  core.ts  server.ts
